# swival

./: ChangeLog.md  Makefile  README.md  build.py  pyproject.toml
.github/workflows/: test.yml
docs/: index.html  sitemap.xml
docs.md/: a2a.md  acp.md  agentfs.md  audit.md  command-middleware.md  context-management.md  custom-commands.md  customization.md  getting-started.md  goal.md  library.md  lifecycle-hooks.md  llm-filter.md  metaskills.md  open-models.md  providers.md  python-api.md  reports.md  reviews.md  safety-and-sandboxing.md  secrets.md  skills.md  tools.md  usage.md  web-browsing.md
docs/css/: style.css
docs/js/: site.js
docs/pages/: a2a.html  acp.html  agentfs.html  audit.html  command-middleware.html  context-management.html  custom-commands.html  customization.html  getting-started.html  goal.html  index.html  library.html  lifecycle-hooks.html  llm-filter.html  mcp.html  metaskills.html  nono.html  open-models.html  providers.html  python-api.html  reports.html  reviews.html  safety-and-sandboxing.html  secrets.html  skills.html  tools.html  usage.html  web-browsing.html
swival/: FIX_DESIGN.md  REVIEW_DESIGN.md  REVIEW_ISSUES_DESIGN.md  __init__.py  _msg.py  a2a_server.py  agent.py  audit.py  codeparse.py  command_middleware.py  command_policy.py  completer.py  config.py  continue_here.py  edit.py  fix.py  fmt.py  goal.py  input_commands.py  input_dispatch.py  loops.py  metaskills.py  model_catalog.py  model_prefs.py  onboarding.py  outline.py  picker.py  review.py  review_issues.py  reviewer.py  sandbox_agentfs.py  session.py  skills.py  skills_cli.py  subagent.py  system_prompt.txt  terminal.py  thinking.py  tools.py
tests/: test_a2a_server.py  test_audit_command.py  test_audit_readme.py  test_codeparse.py  test_command_spinner.py  test_compact.py  test_config.py  test_continue_here.py  test_edit.py  test_fmt.py  test_homebrew_formula.py  test_homebrew_runtime_path.py  test_loop_background.py  test_loop_command.py  test_metaskills.py  test_model_catalog.py  test_model_prefs.py  test_model_repl.py  test_onboarding.py  test_outline.py  test_picker.py  test_provider.py  test_python_tool.py  test_repl.py  test_retry.py  test_reviewer.py  test_run_command.py  test_session.py  test_skills_cli.py  test_subagent.py  test_system_prompt_contracts.py  test_terminal.py  test_tools.py  test_truncated_response.py  test_yolo.py
